html - ptbr e css

--- a/css/mycss.css
+++ b/css/mycss.css
@@ -54,6 +54,8 @@ img {
     padding: 20px 20px 20px 20px;
     margin: 60px;
     margin-left: 135px;
+    top: 500px;
+    right: 100px;
     position: absolute;
     bottom: 0;
     height: 220px;
